--- a/app/src/main/res/layout/specific_location_activity.xml
+++ b/app/src/main/res/layout/specific_location_activity.xml
@@ -4,32 +4,53 @@
     android:layout_height="match_parent"
     tools:context="danieljfears.assignment.SpecificLocationActivity">
 
-    <TextView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lblLocationTitle"
-        android:gravity="center"
-        android:textSize="36sp"/>
+        android:layout_height="100dp"
+        android:id="@+id/topbar"
+        android:background="#0d65d3">
 
-    <TextView
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lblLocationTitle"
+            android:textSize="42sp"
+            android:layout_marginLeft="20dp"
+            android:layout_centerVertical="true"
+            android:textColor="#ffffff"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lblCountryTitle"
+            android:textSize="20sp"
+            android:textColor="#cccccc"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="55dp"
+            android:layout_marginRight="10dp"/>
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/imgFlag"
+            android:layout_marginTop="80dp"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="20dp"/>
+
+    </RelativeLayout>
+
+    <GridView
+        android:id="@+id/gridview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/lblCountryTitle"
-        android:gravity="center"
-        android:textSize="20sp"
-        android:layout_below="@+id/lblLocationTitle"/>
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imgFlag"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"/>
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/imgPhoto"
-        />
+        android:layout_height="match_parent"
+        android:layout_below="@+id/topbar"
+        android:columnWidth="100dp"
+        android:numColumns="auto_fit"
+        android:verticalSpacing="10dp"
+        android:horizontalSpacing="10dp">
+        </GridView>
 
 </RelativeLayout>
