--- a/app/src/main/res/layout/cell_photo.xml
+++ b/app/src/main/res/layout/cell_photo.xml
@@ -4,8 +4,8 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
         android:id="@+id/imgPhoto"/>
 
 </RelativeLayout>
