--- a/app/src/main/res/layout/specific_location_activity.xml
+++ b/app/src/main/res/layout/specific_location_activity.xml
@@ -16,8 +16,8 @@
             android:id="@+id/lblLocationTitle"
             android:textSize="42sp"
             android:layout_marginLeft="20dp"
-            android:layout_centerVertical="true"
-            android:textColor="#ffffff"/>
+            android:layout_marginTop="10dp"
+            android:textColor="#ffffff" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,20 +25,22 @@
             android:id="@+id/lblCountryTitle"
             android:textSize="20sp"
             android:textColor="#cccccc"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_marginTop="55dp"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginTop="61dp"
+            android:layout_marginLeft="60dp"/>
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/imgFlag"
-            android:layout_marginTop="80dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"/>
+            android:layout_marginTop="60dp"
+            android:layout_marginLeft="22dp"/>
+
+        <ImageView
+            android:layout_width="120dp"
+            android:layout_height="80dp"
+            android:id="@+id/imgPhoto"
+            android:layout_marginLeft="230dp"
+            android:layout_centerVertical="true"/>
 
     </RelativeLayout>
 
