Progress towards material design HCI

--- a/app/src/main/res/layout/activity_locations.xml
+++ b/app/src/main/res/layout/activity_locations.xml
@@ -5,12 +5,46 @@
     tools:context="danieljfears.assignment.LocationsActivity"
     android:background="#cccccc">
 
-    <ListView
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/ListLocations"
-        android:dividerHeight="2dp"
-        android:divider="#212121">
-    </ListView>
+        android:layout_height="100dp"
+        android:background="#5677fc"
+        android:id="@+id/topbar">
+
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/logo"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Travel Locations"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/imageView"
+            android:textSize="30dp"
+            android:layout_marginLeft="20dp"
+            android:textColor="#fff"/>
+
+    </RelativeLayout>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/topbar">
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/ListLocations"
+            android:dividerHeight="2dp"
+            android:divider="#212121"
+            android:background="#fff">
+        </ListView>
+
+    </RelativeLayout>
 
 </RelativeLayout>
