--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,50 +5,89 @@
     tools:context=".FlickrApp"
     android:background="#ffffffff">
 
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/imageView"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:src="@drawable/flickrlogo"/>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:background="#5677fc"
+        android:id="@+id/topbar">
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Top Locations"
-        android:id="@+id/btnLocations"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:background="#ff0767db"
-        android:textColor="#fffd0083"
-        android:textSize="@dimen/abc_text_size_large_material"/>
+        <ImageView
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_alignParentTop="true"
+            android:src="@drawable/logo"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="20dp"/>
 
-    <Button
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
-        android:text="Top Photos"
-        android:id="@+id/btnPhotos"
-        android:layout_below="@+id/btnLocations"
-        android:layout_alignLeft="@+id/btnLocations"
-        android:layout_alignStart="@+id/btnLocations"
-        android:layout_marginTop="30dp"
-        android:background="#ff0063da"
-        android:textColor="#fffd0083"
-        android:textSize="@dimen/abc_text_size_large_material" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Travelocity App"
+            android:layout_centerVertical="true"
+            android:layout_toRightOf="@id/imageView"
+            android:textSize="30dp"
+            android:layout_marginLeft="20dp"
+            android:textColor="#fff"/>
 
-    <Button
-        android:layout_width="200dp"
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:background="@drawable/bg"
+        android:layout_below="@+id/topbar"
+        android:id="@+id/picture">
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Search"
-        android:id="@+id/btnSearch"
-        android:layout_below="@+id/btnPhotos"
-        android:layout_alignLeft="@+id/btnPhotos"
-        android:layout_alignStart="@+id/btnPhotos"
-        android:layout_marginTop="30dp"
-        android:background="#ff0063da"
-        android:textColor="#fffd0083"
-        android:textSize="@dimen/abc_text_size_large_material" />
+        android:id="@+id/buttons"
+        android:layout_below="@+id/picture">
+
+
+        <Button
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:id="@+id/btnLocations"
+            android:background="@drawable/travelbutton" />
+
+        <Button
+            android:layout_width="180dp"
+            android:layout_height="180dp"
+            android:id="@+id/btnProfile"
+            android:background="@drawable/profilebutton"
+            android:layout_toRightOf="@+id/btnLocations"/>
+
+    </RelativeLayout>
+
+    <!--<Button-->
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Top Photos"-->
+        <!--android:id="@+id/btnPhotos"-->
+        <!--android:layout_below="@+id/btnLocations"-->
+        <!--android:layout_alignLeft="@+id/btnLocations"-->
+        <!--android:layout_alignStart="@+id/btnLocations"-->
+        <!--android:layout_marginTop="30dp"-->
+        <!--android:background="#ff0063da"-->
+        <!--android:textColor="#fffd0083"-->
+        <!--android:textSize="@dimen/abc_text_size_large_material" />-->
+
+    <!--<Button-->
+        <!--android:layout_width="200dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="Search"-->
+        <!--android:id="@+id/btnSearch"-->
+        <!--android:layout_below="@+id/btnPhotos"-->
+        <!--android:layout_alignLeft="@+id/btnPhotos"-->
+        <!--android:layout_alignStart="@+id/btnPhotos"-->
+        <!--android:layout_marginTop="30dp"-->
+        <!--android:background="#ff0063da"-->
+        <!--android:textColor="#fffd0083"-->
+        <!--android:textSize="@dimen/abc_text_size_large_material" />-->
 
     <TextView
         android:layout_width="wrap_content"
