--- a/app/src/main/res/layout/specific_location_activity.xml
+++ b/app/src/main/res/layout/specific_location_activity.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:id="@+id/topbar"
-        android:background="#0d65d3">
+        android:background="#5677fc">
 
         <TextView
             android:layout_width="wrap_content"
