--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,28 +7,19 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="100dp"
+        android:layout_height="70dp"
         android:background="#5677fc"
         android:id="@+id/topbar">
-
-        <ImageView
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:id="@+id/imageView"
-            android:layout_alignParentTop="true"
-            android:src="@drawable/logo"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Travelocity App"
+            android:text="Travelocity"
             android:layout_centerVertical="true"
-            android:layout_toRightOf="@id/imageView"
             android:textSize="30dp"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="200dp"
             android:textColor="#fff"/>
+
 
     </RelativeLayout>
 
@@ -63,32 +54,6 @@
 
     </RelativeLayout>
 
-    <!--<Button-->
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Top Photos"-->
-        <!--android:id="@+id/btnPhotos"-->
-        <!--android:layout_below="@+id/btnLocations"-->
-        <!--android:layout_alignLeft="@+id/btnLocations"-->
-        <!--android:layout_alignStart="@+id/btnLocations"-->
-        <!--android:layout_marginTop="30dp"-->
-        <!--android:background="#ff0063da"-->
-        <!--android:textColor="#fffd0083"-->
-        <!--android:textSize="@dimen/abc_text_size_large_material" />-->
-
-    <!--<Button-->
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:text="Search"-->
-        <!--android:id="@+id/btnSearch"-->
-        <!--android:layout_below="@+id/btnPhotos"-->
-        <!--android:layout_alignLeft="@+id/btnPhotos"-->
-        <!--android:layout_alignStart="@+id/btnPhotos"-->
-        <!--android:layout_marginTop="30dp"-->
-        <!--android:background="#ff0063da"-->
-        <!--android:textColor="#fffd0083"-->
-        <!--android:textSize="@dimen/abc_text_size_large_material" />-->
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -96,4 +61,13 @@
         android:id="@+id/textView"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <ImageView
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:id="@+id/imageView"
+        android:src="@drawable/logo"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="30dp"/>
+
 </RelativeLayout>
